<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".presentation.view.activities.AddEventActivity">


    <EditText
        android:id="@+id/nameEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="20dp"
        android:hint="@string/event_name"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:backgroundTint="#fff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/descEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="20dp"
        android:hint="@string/desc"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:backgroundTint="#fff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameEt" />

    <Button
        android:id="@+id/checkBtn"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/primaryColor"
        android:paddingVertical="20dp"
        android:text="@string/check_time_for_location"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/descEt" />

    <AutoCompleteTextView
        android:id="@+id/autoComplete"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="40dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:backgroundTint="#fff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/checkBtn"
        app:layout_constraintTop_toBottomOf="@id/descEt" />

    <Button
        android:id="@+id/setDate"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/primaryColor"
        android:text="@string/set_date"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkBtn" />

    <Button
        android:id="@+id/setTime"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/primaryColor"
        android:text="@string/set_time"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@id/setDate"
        app:layout_constraintTop_toBottomOf="@id/checkBtn" />

    <Spinner
        android:id="@+id/priority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/setDate" />


    <EditText
        android:id="@+id/urlEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="20dp"
        android:hint="@string/url"
        android:inputType="textUri"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:backgroundTint="#fff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/priority" />

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/primaryColor"
        android:paddingVertical="20dp"
        android:text="@string/save_event"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/urlEt" />

</androidx.constraintlayout.widget.ConstraintLayout>